--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 deploy:
   provider: npm
   skip_cleanup: true
+  email: "hotdog929@gmail.com"
   api_key: "${NPM_KEY}"
   on:
     tags: true
