add script and css build tasks

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name" : "gulp-template-servlet-expansion",
-    "version" : "0.0.2",
+    "version" : "0.0.3",
     "devDependencies" : {
         "gulp" : "^3.9.1",
         "gulp-param" : "^1.0.3",
@@ -11,6 +11,8 @@
         "q" : "^1.4.1",
         "event-stream" : "^3.3.2",
         "del" : "^2.2.0",
+        "path" : "^0.12.7",
+        "underscore" : "^1.8.3",
         "merge" : "^1.2.0",
         "jsonnet-exec" : "^0.1.0",
         "gulp-template-util" : "^0.0.1"
